--- a/app/src/main/res/layout-v28/activity_profile_user_opposite2.xml
+++ b/app/src/main/res/layout-v28/activity_profile_user_opposite2.xml
@@ -10,6 +10,11 @@
 
     tools:context=".ProfileUserOppositeActivity2">
 
+    <ProgressBar
+        android:id="@+id/progress_reload"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -17,24 +22,18 @@
         android:fillViewport="true">
 
         <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+
                 android:layout_width="match_parent"
                 android:background="@color/background_white"
                 android:layout_height="wrap_content">
 
-                <ProgressBar
-                    android:id="@+id/progress_bar_pre_pro"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-
-                    app:layout_constraintBottom_toTopOf="@+id/main"
-                    app:layout_constraintEnd_toEndOf="@+id/slide_main"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/slide_main" />
                 <com.jabirdeveloper.tinderswipe.WrapContentHeightViewPager
                     android:id="@+id/slide_main"
                     android:layout_width="match_parent"
