--- a/app/src/main/res/layout-v28/activity_listcard.xml
+++ b/app/src/main/res/layout-v28/activity_listcard.xml
@@ -11,8 +11,8 @@
     <ProgressBar
         android:visibility="visible"
         android:id="@+id/view_pro"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:progressTint="@color/c1"
         app:layout_constraintBottom_toBottomOf="parent"
