--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <de.hdodenhof.circleimageview.CircleImageView
+            android:visibility="gone"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/image_holder"
@@ -28,7 +29,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <LinearLayout
+                    <RelativeLayout
+                        android:visibility="gone"
                         android:layout_marginStart="1dp"
                         android:layout_marginEnd="1dp"
                         android:id="@+id/lilili"
@@ -45,8 +47,9 @@
                             android:hint="Time"
                             android:paddingBottom="3dp"
                             android:textSize="10.5dp" />
-                    </LinearLayout>
-                    <LinearLayout
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:visibility="gone"
                         android:paddingTop="6dp"
                         android:paddingBottom="6dp"
                         android:id="@+id/lili"
@@ -68,8 +71,8 @@
                             android:layout_below="@+id/Linear_top_chat"
                             android:layout_centerHorizontal="true"
                             style="?android:attr/progressBarStyle"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             />
 
@@ -99,9 +102,10 @@
                             android:id="@+id/chatmessage"/>
 
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
+                        android:visibility="gone"
                         android:id="@+id/li"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -137,7 +141,7 @@
                         </androidx.cardview.widget.CardView>
 
 
-                    </LinearLayout>
+                    </RelativeLayout>
                 </RelativeLayout>
                 <TextView
                     android:visibility="gone"
