--- a/app/src/main/res/layout/hi_item.xml
+++ b/app/src/main/res/layout/hi_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginRight="5dp"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <androidx.cardview.widget.CardView
+
+    <com.google.android.material.card.MaterialCardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_marginEnd="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:outlineSpotShadowColor="@color/float_transparent"
+        app:cardElevation="2dp"
         app:cardCornerRadius="7dp">
+
 
         <ImageView
             android:id="@+id/image_Hi"
@@ -22,14 +21,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center_horizontal"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp"
+            android:includeFontPadding="false"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Mai"
             android:textColor="@color/cpb_white"
             android:textSize="16dp"/>
 
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
