--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -55,6 +55,10 @@
                         android:id="@+id/lili"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
                         <Button
                             android:visibility="gone"
                             android:layout_gravity="center"
@@ -100,7 +104,7 @@
                             android:layout_height="wrap_content"
                             android:text="Text"
                             android:id="@+id/chatmessage"/>
-
+                        </LinearLayout>
 
                     </RelativeLayout>
 
