--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center">
     <LinearLayout
+        android:layout_centerVertical="true"
         android:orientation="vertical"
         android:id="@+id/linear_buttonQA"
         android:layout_width="match_parent"
@@ -13,9 +14,9 @@
         <TextView
             android:id="@+id/questionQARegister"
             android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoSizeMaxTextSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="18dp"
             android:text="Message"/>
         <RadioGroup
             android:background="@color/background_gray"
@@ -88,17 +89,17 @@
                 android:text="label_4"/>
         </RadioGroup>
         <TextView
+            android:layout_gravity="bottom"
             android:id="@+id/countRegisterQA"
-            android:layout_margin="10dp"
             android:textSize="12sp"
             android:gravity="center"
             android:text="0/0"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/linear_buttonQA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Button
